// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Radio Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="Radio_radio__Fh+3R">
    <input id="radioInputId-:r2:"
           class="Radio_radioInput__gTlv0"
           type="radio"
           value
    >
    <label class="Radio_radioLabel__lJQhF"
           for="radioInputId-:r2:"
    >
      Enkeltpersonsforetak
    </label>
  </div>
</div>
`;

exports[`Tester/Radio WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <div class="Radio_radio__Fh+3R">
    <input id="radioInputId-:r7:"
           class="Radio_radioInput__gTlv0"
           type="radio"
           aria-describedby="htmlId"
           value
    >
    <label class="Radio_radioLabel__lJQhF"
           for="radioInputId-:r7:"
    >
      Enkeltpersonsforetak
    </label>
  </div>
</div>
`;

exports[`Tester/Radio WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="Radio_radio__Fh+3R dummyClassname"
       lang="nb"
  >
    <input id="htmlId"
           class="Radio_radioInput__gTlv0"
           data-testid="123ID"
           type="radio"
           value
    >
    <label class="Radio_radioLabel__lJQhF"
           for="htmlId"
    >
      Enkeltpersonsforetak
    </label>
  </div>
</div>
`;

exports[`Tester/Radio WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class="Radio_radio__Fh+3R">
    <input id="radioInputId-:r3:"
           class="Radio_radioInput__gTlv0"
           type="radio"
           value
    >
    <label class="Radio_radioLabel__lJQhF"
           for="radioInputId-:r3:"
    >
      Enkeltpersonsforetak
      <span class="Radio_radioLabelDescription__29Ec0">
        En liten beskrivelse tekst
      </span>
    </label>
  </div>
</div>
`;

exports[`Tester/Radio WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <div class="Radio_radio__Fh+3R">
    <input id="radioInputId-:r4:"
           class="Radio_radioInput__gTlv0"
           type="radio"
           value
    >
    <label class="Radio_radioLabel__lJQhF"
           for="radioInputId-:r4:"
    >
      Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      <span class="Radio_radioLabelDescription__29Ec0">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </span>
    </label>
  </div>
</div>
`;

exports[`Tester/Radio WithLongTextAndBreaking smoke-test 1`] = `
<div data-test-block="true">
  <div class="Radio_radio__Fh+3R">
    <input id="radioInputId-:r5:"
           class="Radio_radioInput__gTlv0"
           type="radio"
           value
    >
    <label class="Radio_radioLabel__lJQhF"
           for="radioInputId-:r5:"
    >
      Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
      <span class="Radio_radioLabelDescription__29Ec0">
        Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
      </span>
    </label>
  </div>
</div>
`;

exports[`Tester/Radio WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="Radio_radio__Fh+3R">
    <input id="radioInputId-:r0:"
           class="Radio_radioInput__gTlv0"
           type="radio"
           value
           name="dummyIdForwardedFromRef"
    >
    <label class="Radio_radioLabel__lJQhF"
           for="radioInputId-:r0:"
    >
      Enkeltpersonsforetak
    </label>
  </div>
</div>
`;

exports[`Tester/Radio WithValue play-test 1`] = `
<div data-test-block="true">
  <div class="Radio_radio__Fh+3R">
    <input id="radioInputId-:r6:"
           class="Radio_radioInput__gTlv0"
           type="radio"
           value="person"
    >
    <label class="Radio_radioLabel__lJQhF"
           for="radioInputId-:r6:"
    >
      Enkeltpersonsforetak
    </label>
  </div>
</div>
`;
